test/fails/bad_generics/declare4.lgl
tag pos is vec<3>;
tag color is vec<3>;
tag tinted is color;

declare `t normalize<`t : vec>(`t x);

void main() {
    pos vert = [1., 2., 3.];
    color fail = normal<color>(vert);  // Intended use case
}